fix(css): better wrapping in river cards

--- a/views/default/campaigns/stylesheet.css
+++ b/views/default/campaigns/stylesheet.css
@@ -297,7 +297,12 @@ span.campaigns-give-item-stock {
 
 .campaigns-river-card {
     display: flex;
-    flex-wrap: wrap;
+    flex-wrap: nowrap;
+}
+@media screen and (max-width: 820px) {
+	.campaigns-river-card {
+		flex-wrap: wrap;
+	}
 }
 
 .campaigns-river-media {
